# BSA_website

./: README.md
Test_oracle/: README-3.md
Test_oracle/QuantumGrid/: app.py  demo_complete.py  oracle_service.py  student_action.py  training.py
Test_oracle/oracle/: .env  README.md  bridge.py  bridge2.py  bridge_tele.py  client.py  config.py  crypto_condition.py  demo_timeout.py  escrow_monitor.py  oracle.py  oracle2.py  quantum_executor.py  requirements.txt  telescope_demo.py  test_e2e.py  xrpl_client.py
Test_oracle/oracle/data/: wallets.json
Test_oracle/oracle/src/: config2.py  demo.py  nft.py  wallets.py
backend/db/: .env  package-lock.json  package.json  tsconfig.json
backend/db/prisma/: schema.prisma
backend/db/src/: app.ts  prisma.ts  seed.ts
backend/db/src/controllers/: instrument.controller.ts  notification.controller.ts  session.controller.ts  user.controller.ts
backend/oracle/: CMakeLists.txt  main.cpp  oracle.cpp  oracle.h
backend/xrpl/: api.py  bridge.py  bridge_tele.py  client.py  config.py  crypto_condition.py  demo.py  escrow.js  nft.py  oracle.py  paymentChannel.js  quantum_executor.py  requirements.txt  test_e2e.py  wallets.py  xrpl_client.py
css/: base.css  hero.css  marketplace.css  modal.css  nav.css  session.css  variables.css
frontend/: index.html  index__n.html
frontend/css/: hero.css  how.css  marketplace.css  modal.css  nav.css  session.css  styles.css  variables.css
frontend/js/: auth.js  config.js  instruments.js  main.js  modal copy.js  modal.js  router.js  session copy.js  session.js  wallet.js
js/: config.js
(+1 files in other folders)
